r8168 (8.047.02-1) UNRELEASED; urgency=medium

  * New upstream release 8.047.02 (2019-06-21).

 -- Andreas Beckmann <anbe@debian.org>  Tue, 30 Jul 2019 09:36:10 +0200

r8168 (8.047.01-1) unstable; urgency=medium

  * New upstream release 8.047.01 (2019-04-18).
  * Switch to debhelper-compat (= 12).
  * Update Homepage URL.
  * Bump Standards-Version to 4.3.0 (no changes needed).

 -- Andreas Beckmann <anbe@debian.org>  Sat, 27 Apr 2019 06:56:01 +0200

r8168 (8.046.00-1) unstable; urgency=medium

  * New upstream release 8.046.00 (2018-08-03).  (Closes: #903255)
  * Remove kernel support patches that were fixed upstream.
  * Refresh remaining patches.
  * Bump Standards-Version to 4.2.0 (no changes needed).
  * Use the real upstream as Homepage, not the unofficial mirror.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 09 Aug 2018 15:54:32 +0200

r8168 (8.045.08-3) unstable; urgency=medium

  * Restore support for older kernels.
  * Switch Vcs-* URLs to salsa.debian.org.
  * Bump Standards-Version to 4.1.4 (no changes needed).

 -- Andreas Beckmann <anbe@debian.org>  Fri, 06 Apr 2018 14:42:03 +0200

r8168 (8.045.08-2) unstable; urgency=medium

  * linux-4.15-2.patch: New, from Arch Linux, fix building the module for
    Linux 4.15.  (Closes: #882838) (LP: #1737755)
  * Bump Standards-Version to 4.1.3 (no changes needed).
  * Switch to debhelper compat level 11.
  * Set Rules-Requires-Root: no.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 12 Jan 2018 00:55:37 +0100

r8168 (8.045.08-1) unstable; urgency=medium

  * New upstream release 8.045.08 (2017-09-15).  (Closes: #876085)
  * linux-4.11.patch: Remove, fixed upstream.
  * Use dpkg makefile snippets instead of manual changelog parsing.
  * Set Priority to optional.
  * Bump Standards-Version to 4.1.1.
  * Set XS-Autobuild: yes.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 04 Oct 2017 15:48:48 +0200

r8168 (8.044.02-2) unstable; urgency=medium
