@@ -3,25 +3,25 @@ Description: this was not changed in 3.6 but in 3.7
 
 --- a/src/r8168_n.c
 +++ b/src/r8168_n.c
-@@ -5221,7 +5221,7 @@ int _kc_ethtool_op_set_sg(struct net_dev
+@@ -6111,7 +6111,7 @@ static int rtl_nway_reset(struct net_dev
+         return ret;
  }
- #endif
  
 -#if LINUX_VERSION_CODE >= KERNEL_VERSION(3,6,0)
 +#if LINUX_VERSION_CODE >= KERNEL_VERSION(3,7,0)
  static int
  rtl_ethtool_get_eee(struct net_device *net, struct ethtool_eee *eee)
  {
-@@ -5320,7 +5320,7 @@ rtl_ethtool_set_eee(struct net_device *n
+@@ -6204,7 +6204,7 @@ rtl_ethtool_set_eee(struct net_device *n
  
          return 0;
  }
 -#endif /* LINUX_VERSION_CODE >= KERNEL_VERSION(3,6,0) */
 +#endif /* LINUX_VERSION_CODE >= KERNEL_VERSION(3,7,0) */
  
- static int rtl_nway_reset(struct net_device *dev)
- {
-@@ -5396,10 +5396,10 @@ static const struct ethtool_ops rtl8168_
+ #if LINUX_VERSION_CODE > KERNEL_VERSION(2,4,22)
+ static const struct ethtool_ops rtl8168_ethtool_ops = {
+@@ -6252,10 +6252,10 @@ static const struct ethtool_ops rtl8168_
  #if LINUX_VERSION_CODE >= KERNEL_VERSION(3,5,0)
          .get_ts_info        = ethtool_op_get_ts_info,
  #endif //LINUX_VERSION_CODE >= KERNEL_VERSION(3,5,0)
